--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,16 +85,16 @@ body {
   overflow-x: hidden;
 }
 
-table.jobCardTable {
-  border: 1px solid black;
-}
+
 
 table{
   width: 100%;
+  padding: 25px 25px 25px 25px;
 }
 
 td {
   border: 1px solid black;
+  text-align: center;
 }
 
 td:nth-child(1){
@@ -102,7 +102,7 @@ td:nth-child(1){
 }
 
 td:nth-child(2){
-  width: 30%;
+  width: 35%;
 }
 
 body {
