Increased the table header size from Normal to XXL

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,6 +92,10 @@ table{
   padding: 25px 25px 25px 25px;
 }
 
+th{
+  font-size: xx-large;
+}
+
 td {
   border: 1px solid black;
   text-align: center;
