--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,15 +104,22 @@ caption{
 td {
   border: 1px solid black;
   text-align: center;
-  font-size: 19px
+  font-size: 22px
 }
 
 td:nth-child(1){
   width: 10%
 }
+td:nth-child(3){
+  width: 10%
+}
+td:nth-child(4){
+  width: 10%
+}
+
 
 td:nth-child(2){
-  width: 35%;
+  width: 50%;
 }
 
 body {
