Changed from the regular JSX table to one that looks more government style Spacing has been added between each job to make each one easier to read

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,12 +85,14 @@ body {
   overflow-x: hidden;
 }
 
-
-
 table{
   width: 100%;
   padding: 25px 25px 25px 25px;
   font-family: Helvetica, sans-serif;
+}
+
+Table.Cell:nth-child(1){
+  width: 10%;
 }
 
 th{
