Fixed the postcode input so that it returns something other than null Fixed most of the errors that appeared in the console thanks to Tom
This push is for the presentation later

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,13 +116,13 @@ span{
   font-size: 30px;
   font-weight: 600;
 }
-button{
-  display: inline-flex;
-  align-items: center;
+
+h2{
+  text-align: center;
 }
+
 input{
-  display: inline-flex;
-  align-items: center;
+  line-height: inherit;
 }
 
 caption{
