--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,8 +85,16 @@ body {
   overflow-x: hidden;
 }
 
+#jobTitles{
+  font-size: 25px;
+}
+
 #mainTable{
   padding-right: 65px !important;
+}
+
+#jobSalaries{
+  font-size: 22px;
 }
 
 caption{
@@ -97,10 +105,10 @@ th:nth-child(1){
   width: 14%
 }
 td:nth-child(2){
-  width: 30%;
+  width: 14%;
 }
 td:nth-child(3){
-  width: 14%
+  width: 30%
 }
 td:nth-child(4){
   width: 14%
