--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,7 @@ body {
 
 #mainTable{
   padding-right: 65px !important;
+  padding-left: 65px !important;
 }
 
 #jobSalaries{
@@ -114,10 +115,10 @@ td:nth-child(4){
   width: 14%
 }
 td:nth-child(5){
-  width: 14%
+  width: 12%
 }
 td:nth-child(6){
-  width: 14%
+  width: 16%
 }
 
 strong{
