Changed size of Find A Job Added hint text for the user

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,14 @@ body {
   overflow-x: hidden;
 }
 
+#fajTitle{
+  font-size: 35px;
+}
+
+#explanationText{
+  font-size: 20px;
+}
+
 #jobTitles{
   font-size: 25px;
 }
