--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,11 +86,11 @@ body {
 }
 
 #fajTitle{
-  font-size: 35px;
+  font-size: 35px !important;
 }
 
 #explanationText{
-  font-size: 20px;
+  font-size: 21px !important;
 }
 
 #jobTitles{
@@ -114,10 +114,10 @@ th:nth-child(1){
   width: 14%
 }
 td:nth-child(2){
-  width: 14%;
+  width: 30%;
 }
 td:nth-child(3){
-  width: 30%
+  width: 14%
 }
 td:nth-child(4){
   width: 14%
